fix error with font on ie

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 @font-face {
-  font-family: "Main font";
+  font-family: "Lucida Console";
   font-display: fallback;
-  src: url(./fonts/font.ttf);
+  src: url("./fonts/LucidaConsole.eot"); /* IE9*/
+  src: url("./fonts/LucidaConsole.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("./fonts/LucidaConsole.woff2") format("woff2"),
+    /* chrome、firefox */ url("./fonts/LucidaConsole.woff") format("woff"),
+    /* chrome、firefox */ url("./fonts/LucidaConsole.ttf") format("truetype"),
+    /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+      url("./fonts/LucidaConsole.svg#Lucida Console") format("svg"); /* iOS 4.1- */
 }
 
 body {
@@ -24,7 +30,7 @@ main {
   justify-content: center;
   margin: 0 auto;
   color: #6c9ef8;
-  font-family: "Main font";
+  font-family: "Lucida Console";
   text-align: center;
 }
 
